sickchill/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sickchill-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
  labels:
    app: sickchill
spec:
  rules:
    - host: sickchill.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sickchill
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sickchill-https
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: ca-issuer
  labels:
    app: sickchill
spec:
  rules:
    - host: sickchill.celestium.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sickchill
                port:
                  number: 8080
  tls:
    - hosts:
        - sickchill.celestium.life
      secretName: sickchill-cert
